<resources>
    <string name="app_name">HelloWorld</string>
    <string name="button_Textview">TextView</string>
    <string name="textview_text">GSNICE 在奔跑</string>
    <string name="textview_light">GSNICE 在奔跑~GSNICE 在奔跑~GSNICE 在奔跑~GSNICE 在奔跑</string>

    <string name="button_Button">Button</string>

    <string name="button_EditText">EditText</string>

    <string name="button_RadioButton">RadioButton</string>

    <string name="button_CheckBox">CheckBox</string>

    <string name="button_CheckBox_Text">你会哪些移动开发：</string>

    <string name="button_ImageView">ImageView</string>

    <string name="button_ToggleButton">ToggleButton / Switch</string>

    <string name="button_SeekBar">SeekBar</string>

    <string name="button_ScrollView">ScrollView</string>

    <string name="button_ListView">ListView</string>

</resources>