<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <Button
        android:id="@+id/button_Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Textview"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Button"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_EditText"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_RadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_RadioButton"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_CheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_CheckBox"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_ImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ImageView"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_ToggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ToggleButton"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_SeekBar"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
    />

    <Button
        android:id="@+id/button_ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ScrollView"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/button_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ListView"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>
</LinearLayout>